--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -2,8 +2,17 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-.form-control {
+.form-control, .form-select {
     background-color: #354453;
-    border: 1px solid $primary;
-    box-shadow: 7px 7px 10px 0 #fff;
+    border: none;
+    border-left: 1px solid $primary;
+    border-right: 1px solid $primary;
+
+    &:focus {
+        background-color: #27323D;
+    }
+}
+
+.form-select {
+    background-image: url(../img/select.svg);    
 }
