--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,5 +1,4 @@
 html {
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
@@ -7,16 +6,73 @@ p {
     color: #E8E8E8;
 }
 
-@import "parallax";
+@import "space";
 @import "about";
 @import "business";
 @import "values";
 @import "partners";
 
-.bg-darker {
-    background: $darker;
+section {
+    position: relative;
 }
 
-::-webkit-scrollbar {
-    width: 0;
+a.scroll {
+    font: normal 400 20px/1 "Josefin Sans", sans-serif;
+    transform: translate(0, -50%);
+    transition: opacity 0.3s;
+    display: inline-block;
+    letter-spacing: 0.1em;
+    text-decoration: none;
+    position: absolute;
+    color: #fff;
+    bottom: 10%;
+    left: 50%;
+
+    &:hover {
+        opacity: 0.5;
+    }
+
+    span {
+        border: 1px solid #fff;
+        box-sizing: border-box;
+        border-radius: 100%;
+        position: absolute;
+        margin-left: -23px;
+        height: 46px;
+        width: 46px;
+        left: 50%;
+        top: 0;
+
+        &::after {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            content: "";
+            width: 16px;
+            height: 16px;
+            margin: -12px 0 0 -8px;
+            border-left: 1px solid #fff;
+            border-bottom: 1px solid #fff;
+            transform: rotate(-45deg);
+            box-sizing: border-box;
+        }
+
+        &::before {
+            box-shadow: 0 0 0 0 rgba($color: #fff, $alpha: 0.1);
+            animation: pin 3s infinite;
+            box-sizing: border-box;
+            border-radius: 100%;
+            position: absolute;
+            height: 44px;
+            width: 44px;
+            content: "";
+            opacity: 0;
+            left: 0;
+            top: 0;
+        }
+    }
+}
+
+.bg-darker {
+    background: $darker;
 }
