--- a/scss/_business.scss
+++ b/scss/_business.scss
@@ -1,5 +1,5 @@
 #business {
-    background: url(../img/business-bg.jpg);
+    background: url(../img/business-bg.webp);
     background-repeat: no-repeat;
     background-position: center;
     justify-content: center;
