--- a/scss/_partners.scss
+++ b/scss/_partners.scss
@@ -1,5 +1,5 @@
 #partners {
-    background: url(../img/partners-bg.jpg);
+    background: url(../img/partners-bg.webp);
     background-size: cover;
     
     .waves {
