--- a/scss/_values.scss
+++ b/scss/_values.scss
@@ -1,6 +1,6 @@
 // TEMP
 #values {
-    background: url(../img/values-bg.jpg);
+    background: url(../img/values-bg.webp);
     background-repeat: no-repeat;
     background-position: center;
     justify-content: center;
