--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -16,6 +16,10 @@ section {
     position: relative;
 }
 
+a {
+    text-decoration: none !important;
+}
+
 a.scroll {
     font: normal 400 20px/1 "Josefin Sans", sans-serif;
     transform: translate(0, -50%);
@@ -75,4 +79,18 @@ a.scroll {
 
 .bg-darker {
     background: $darker;
+}
+
+.loading {
+    background-color: #303030;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: fixed;
+    z-index: 1040;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    left: 0;
+    top: 0;
 }
