--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,2 +1,7 @@
 $body-color: #121212;
+$text-muted-color: #454545;
 $primary: #F5B512;
+$font-family-base: "Roboto", system-ui, -apple-system, sans-serif;
+$font-family-title: "Poppins", system-ui, -apple-system, sans-serif;
+$link-color: #fff;
+//$border-radius: 2px;
