--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,44 @@
 @import "settings";
-@import "index";
+@import "navbar";
+
+html {
+  scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-family-title;
+}
+
+p {
+  color: $text-muted-color;
+}
+
+.banner {
+  padding: 3rem 0;
+
+  h1 {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 40px;
+  }
+
+  p {
+    color: #E5E5E5;
+    font-weight: 300;
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .banner {
+    h1 {
+      font-size: 100px;
+    }
+  }
+}
