--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,5 +1,6 @@
 header {
-  //background-color: #303030;
+  background-color: rgba($color: #121212, $alpha: 0.7);
+  backdrop-filter: blur(10px);
   font-family: $font-family-title;
   font-weight: 300;
   position: fixed;
@@ -66,12 +67,14 @@ header {
 }
 
 @media (max-width: 991.98px) {
-  body {
-    overflow-x: hidden;
+  html, body {
+    position: relative;
+    overflow-x: hidden !important;
   }
 
   header nav {
     padding: 0 1rem;
+    height: 9vh;
   }
 
   .nav__toggler {
@@ -86,7 +89,7 @@ header {
     right: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #303030;
+    background-color: #121212;
     flex-direction: column;
     align-items: center;
     transform: translateX(100%);
