--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,66 +1,3 @@
 @import "settings";
 @import "navbar";
-
-html {
-  scroll-behavior: smooth;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: $font-family-title;
-}
-
-p {
-  color: $text-muted-color;
-}
-
-.banner {
-  padding: 6rem 0;
-
-  h1 {
-    color: #fff;
-    font-size: 3em;
-    font-weight: 800;
-    margin-bottom: 40px;
-  }
-
-  p {
-    font-size: 22px;
-    color: #DEDEDE;
-    font-weight: 300;
-    margin-bottom: 30px;
-
-    &.contrast {
-      font-size: 28px;
-      font-weight: 400;
-    }
-  }
-
-  .btn {
-    margin-top: 1rem;
-    padding: .7rem 3rem;
-  }
-
-  span, b {
-    color: $primary;
-  }
-}
-
-@media (min-width: 1200px) {
-  .banner {
-    font-size: 24px;
-    padding: 4rem 0;
-
-    h1 {
-      font-size: 100px;
-    }
-
-    .btn {
-      font-size: 26px;
-    }
-  }
-}
+@import "commons";
