--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -23,10 +23,11 @@ p {
     font-size: 3em;
     font-weight: 800;
     margin-bottom: 40px;
+    line-height: 50px;
   }
 
   p {
-    font-size: 22px;
+    font-size: 20px;
     color: #DEDEDE;
     font-weight: 300;
     margin-bottom: 30px;
@@ -49,8 +50,7 @@ p {
 }
 
 .card {
-  //padding: 0 .5rem;
-  transition: all .7s ease-out;
+  transition: all .5s ease-out;
 
   &__content {
     cursor: pointer;
@@ -61,7 +61,7 @@ p {
     padding: 2rem;
     background-color: #f7f7f7;
     overflow: hidden;
-    transition: all .7s ease-out;
+    transition: all .5s ease-out;
 
     h1 {
       font-size: 18px;
@@ -106,6 +106,10 @@ h1.title {
   margin-bottom: 50px;
 }
 
+.btn {
+  font-family: $font-family-title;
+}
+
 @media (min-width: 1200px) {
   .banner {
     font-size: 24px;
@@ -113,6 +117,7 @@ h1.title {
 
     h1 {
       font-size: 100px;
+      line-height: 90px;
     }
 
     .btn {
