--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -50,18 +50,18 @@ p {
 }
 
 .card {
-  transition: all .5s ease-out;
+  transition: all .5s ease-in-out;
 
   &__content {
     cursor: pointer;
     position: relative;
-    transition: all .2s linear;
-    border-radius: 10px;
-    height: 400px;
+    transition: all .2s ease-in-out;
+    border-radius: 8px;
+    
     padding: 2rem;
     background-color: #f7f7f7;
     overflow: hidden;
-    transition: all .5s ease-out;
+    transition: all .5s ease-in-out;
 
     h1 {
       font-size: 18px;
@@ -73,21 +73,26 @@ p {
       p {
         color: #C4C4C4;
       }
+
       color: #fff;
       background-color: #121212;
       box-shadow: 0 50px 20px -40px rgba($color: #121212, $alpha: 0.6);
+
       .card__icon {
         background-color: rgba($color: #3D3D3D, $alpha: 0.7);
         border: 2px solid $primary;
+        box-shadow: 0 7px 30px -15px $primary;
+        
       }
     }
   }
 
   &__icon {
-    transition: background-color .7s ease-out;
+    transition: background-color .5s ease-in-out;
     padding: 9px;
     height: 50px;
     width: 50px;
+    line-height: 0;
     background-color: #fff;
     margin-bottom: 26px;
     display: flex;
@@ -122,6 +127,12 @@ h1.title {
 
     .btn {
       font-size: 26px;
+    }
+  }
+
+  .card {
+    &__content {
+      height: 100%;
     }
   }
 }
