--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,14 +1,26 @@
-footer {
+.footer {
   background: #121212;
-  display: flex;
   align-items: center;
-  color: #C4C4C4;
+  color: #5E5E5E;
+  display: flex;
+  width: 100%;
+
+  &__l {
+    width: 90%;
+  }
+
+  &__r {
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
 
   a {
     width: 100%;
     height: 100%;
     text-decoration: none;
-    color: #C4C4C4;
+    color: #787878;
 
     &:hover {
       color: $primary;
@@ -24,7 +36,7 @@ footer {
     display: flex;
     align-items: center;
     padding: 4px;
-    background: #454545;
+    background: #333333;
     border-radius: 100%;
 
     &:hover {
