--- a/scss/services.scss
+++ b/scss/services.scss
@@ -11,7 +11,7 @@ body {
 
 .background {
   position: fixed;
-  background: url(../img/service_background.jpg);
+  background: url(../img/service_background.webp);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
